force-app/main/default/objects/Unit__c/fields/Associated_Case__c.field-meta.xml
<CustomField>
    <fullName>Associated_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>