force-app/main/default/objects/Unit__c/fields/Current_Resident__c.field-meta.xml
<CustomField>
    <fullName>Current_Resident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Resident</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>