force-app/main/default/objects/Unit__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Units (Service Provider)</relationshipLabel>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>