force-app/main/default/objects/Unit__c/recordTypes/Housing.recordType-meta.xml
<RecordType>
    <fullName>Housing</fullName>
    <active>true</active>
    <description>This record type specifies the housing</description>
    <label>Housing</label>
</RecordType>