force-app/main/default/objects/Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>