force-app/main/default/objects/Unit__c/listViews/Housing_Units.listView-meta.xml
<ListView>
    <fullName>Housing_Units</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>City__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Unit__c.Housing</value>
    </filters>
    <label>Housing Units</label>
</ListView>