force-app/main/default/objects/Unit__c/listViews/My_Units.listView-meta.xml
<ListView>
    <fullName>My_Units</fullName>
    <columns>NAME</columns>
    <columns>Building__c</columns>
    <columns>City__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Units</label>
</ListView>